--- a/views/register.mustache
+++ b/views/register.mustache
@@ -1,18 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+{{> header}}
     <title>musiCode</title>
-</head>
-<body>
-    {{>header}}
+  </head>
+  <body>
+    <h1>Register</h1>
 
     <div class="container">
-        {{>menu}}
+    
+    {{> menu}}
+    
     </div>
 
-    {{>footer}}
-</body>
+    <form action="/register" method="POST">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Username</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp" placeholder="Enter username">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+  </div>
+  <button type="submit" class="btn btn-primary">Register</button>
+</form>
+
+{{> footer}}
+  </body>
 </html>
