fixed routing issue

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -13,7 +13,7 @@
     
     </div>
 
-    <form action="/login" method="POST">
+    <form action="/users/login" method="POST">
   <div class="form-group">
     <label for="exampleInputEmail1">Username</label>
     <input type="text" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp" placeholder="Enter username">
