--- a/views/register.mustache
+++ b/views/register.mustache
@@ -13,7 +13,7 @@
     
     </div>
 
-    <form action="/register" method="POST">
+    <form action="/users/register" method="POST">
   <div class="form-group">
     <label for="exampleInputEmail1">Username</label>
     <input type="text" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp" placeholder="Enter username">
