search function is enable

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -13,6 +13,13 @@
         {{>menu}}
     </div>
 
+    <div>
+       <form method="post" action="/searches/search">
+          <input type="text" name="searchtextbox" placeholder="search here">
+          <button>submit</button>
+       </form> 
+    </div>
+
     {{>footer}}
 </body>
 </html>
