--- a/views/register.mustache
+++ b/views/register.mustache
@@ -18,10 +18,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Placeholder</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Placeholder2</a>
+              <a class="nav-link" href="/users/login">
+                <svg class="bi bi-power" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M5.578 4.437a5 5 0 1 0 4.922.044l.5-.866a6 6 0 1 1-5.908-.053l.486.875z"/>
+                  <path fill-rule="evenodd" d="M7.5 8V1h1v7h-1z"/>
+                </svg>
+                Login/Register</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -33,13 +35,6 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">My Collection</a></li>
                 <li><a class="dropdown-item" href="#">My Posts</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="/users/login">
-                    <svg class="bi bi-power" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M5.578 4.437a5 5 0 1 0 4.922.044l.5-.866a6 6 0 1 1-5.908-.053l.486.875z"/>
-                        <path fill-rule="evenodd" d="M7.5 8V1h1v7h-1z"/>
-                    </svg>
-                    Login/Log out</a></li>
               </ul>
             </li>
 
