--- a/views/add-post.mustache
+++ b/views/add-post.mustache
@@ -33,8 +33,7 @@
             <input type="hidden" value="{{id}}" name="postId"/>
             <div>{{title}}</div>
             <div>{{body}}</div>
-            <div>{{category}}</div>
-            <div>{{createdAt}}</div>
+            <div>{{projectUrl}}</div>
             <div><button>Delete</button></div>
         </form>
         {{/posts}}
