added first and last name inputs to register page. Updated user.js with first and last name inputs.

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -24,6 +24,7 @@
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
   </div>
   <button type="submit" class="btn btn-primary">Login</button>
+  <p>If you have not registered yet, <a href="/users/register">Click here</a></p>
 </form>
 
 {{> footer}}
