--- a/views/search-results.mustache
+++ b/views/search-results.mustache
@@ -10,7 +10,7 @@
 {{title}}  ,  {{artist.name}}<br>
 {{album.title}}<br>
 <img src="{{album.cover_medium}}"><br>
-<a  href="{{preview}}">preview</a>
+<a target="_blank" href="{{preview}}">preview</a>
 <form method="post" action="/playlists/collection">
 <input type="hidden" value="{{userid}}" name="userid">
 <input type="hidden" value="{{id}}" name="id">
