--- a/views/register.mustache
+++ b/views/register.mustache
@@ -1,55 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-  {{> header}}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>musiCode</title>
-    <link type="text/css" rel="stylesheet" href="/styling/css/bootstrap.css">
+    {{> header}}
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
-      <div class="container">
-        <a class="navbar-brand" href="/">musiCode</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="/users/login">
-                <svg class="bi bi-power" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" d="M5.578 4.437a5 5 0 1 0 4.922.044l.5-.866a6 6 0 1 1-5.908-.053l.486.875z"/>
-                  <path fill-rule="evenodd" d="M7.5 8V1h1v7h-1z"/>
-                </svg>
-                Login/Register</a>
-            </li>
-
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <svg class="bi bi-person-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                </svg>
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">My Collection</a></li>
-                <li><a class="dropdown-item" href="#">My Posts</a></li>
-              </ul>
-            </li>
-
-
-            </ul>
-            <form class="d-flex" method="post" action="/searches/search">
-              <input class="form-control mr-2" type="text" name="searchtextbox" placeholder="Search artist or song" aria-label="Search">
-              <button class="btn btn-dark" type="submit">Search</button>
-            </form>
-
-          </div>
-        </div>
-      </div>
-    </nav>
-
+    {{> menu}}
     <h1>Register</h1>
     <form action="/users/register" method="POST">
     <div class="form-group">
@@ -71,9 +26,10 @@
     </div>
     <button type="submit" class="btn btn-outline-info">Register</button>
     </form>
+    <div id="messageContainer">
+      <h1>{{message}}</h1>
+    </div>
 
     {{> footer}}
-    <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
-    <script src="/styling/js/bootstrap.js"></script>
   </body>
 </html>
