can post and display. made changes to users.js session, to include username and userId (instead of user)

--- a/views/partials/menu.mustache
+++ b/views/partials/menu.mustache
@@ -24,6 +24,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">My Collection</a></li>
                 <li><a class="dropdown-item" href="#">My Posts</a></li>
+                <li><a class="dropdown-item" href="/posts/add-post">Add a Posts</a></li>
               </ul>
             </li>
             </ul>
