--- a/views/add-post.mustache
+++ b/views/add-post.mustache
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <title>musiCode Post</title>
-    
+    {{> header}}
 </head>
 <body>
-    <div id='header'>
-        <h1>musiCode Feed</h1>
-    </div>
-
+    {{> menu}}
     <form method="POST" action='/posts/add-post' id='inputContainer'>
         <div id="subjectDiv">
             <input type="text" placeholder="title" id="titleTextBox" name="title"/>
@@ -38,7 +31,7 @@
         </form>
         {{/posts}}
     </div>
-
+    {{> footer}}
 </body>
 </html>
 
