fixed errors on searches and playlist routes due to last push. updated stylying for login and register

--- a/views/search-results.mustache
+++ b/views/search-results.mustache
@@ -12,7 +12,7 @@
 <img src="{{album.cover_medium}}"><br>
 <a target="_blank" href="{{preview}}">preview</a>
 <form method="post" action="/playlists/collection">
-<input type="hidden" value="{{userid}}" name="userid">
+<input type="hidden" value="{{userId}}" name="userId">
 <input type="hidden" value="{{id}}" name="id">
 <input type="hidden" value="{{title}}" name="title">
 <input type="hidden" value="{{artist.name}}" name="artistName">
