--- a/views/login.mustache
+++ b/views/login.mustache
@@ -6,19 +6,8 @@
   <body>
     {{> menu}}
     <h1>Login</h1>
-    <form action="/users/login" method="POST">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Username</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp" placeholder="Enter username">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
-      </div>
-      <button type="submit" class="btn btn-primary">Login</button>
-      <p>If you have not registered yet, <a href="/users/register">Click here</a></p>
-    </form>
+    {{> login-layout}}
+    
     <div id="messageContainer">
       <h1>{{message}}</h1>
     </div>
