--- a/views/register.mustache
+++ b/views/register.mustache
@@ -6,26 +6,8 @@
   <body>
     {{> menu}}
     <h1>Register</h1>
-    <form action="/users/register" method="POST">
-    <div class="form-group">
-      <label for="exampleInputEmail1">Frist Name</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" name="firstName" aria-describedby="emailHelp" placeholder="Enter first name">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Last Name</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" name="lastName" aria-describedby="emailHelp" placeholder="Enter last name">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Username</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp" placeholder="Enter username">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Create Password" name="password">
-    </div>
-    <button type="submit" class="btn btn-outline-info">Register</button>
-    </form>
+    {{> registration-layout}}
+    
     <div id="messageContainer">
       <h1>{{message}}</h1>
     </div>
