update in displaying the collection of the users

--- a/views/partials/menu.mustache
+++ b/views/partials/menu.mustache
@@ -22,7 +22,7 @@
                 </svg>
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">My Collection</a></li>
+                <li><a class="dropdown-item" href="/playlists/mycollection">My Collection</a></li>
                 <li><a class="dropdown-item" href="#">My Posts</a></li>
               </ul>
             </li>
