--- a/views/login.mustache
+++ b/views/login.mustache
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     {{> header}}
+     <link rel="stylesheet" href="../styling/css/styles.css">
   </head>
   <body>
     {{> menu}}
