--- a/views/partials/header.mustache
+++ b/views/partials/header.mustache
@@ -2,4 +2,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>musiCode</title>
 <link type="text/css" rel="stylesheet" href="/styling/css/bootstrap.css">
-  
+<link rel="stylesheet" href="../styling/css/styles.css">
