added redirect to login and registration, added home to navbar

--- a/views/partials/menu.mustache
+++ b/views/partials/menu.mustache
@@ -4,6 +4,11 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/users/dashboard">Home <span class="sr-only"></span></a>
+      </li>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -23,7 +28,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="/playlists/mycollection">My Collection</a></li>
-                <li><a class="dropdown-item" href="#">My Posts</a></li>
+                <li><a class="dropdown-item" href="/posts/my-posts">My Posts</a></li>
                 <li><a class="dropdown-item" href="/posts/add-post">Add a Posts</a></li>
               </ul>
             </li>
@@ -36,4 +41,5 @@
           </div>
         </div>
       </div>
+    </div>
     </nav>
