--- a/views/my-posts.mustache
+++ b/views/my-posts.mustache
@@ -14,6 +14,7 @@
             <div>{{body}}</div>
             <a target="_blank" href="{{projectUrl}}">Project Link</a>
             <div><button>Delete</button></div>
+            <div><button>Update</button></div>
         </form>
         {{/posts}}
     </div>
