--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -9,16 +9,19 @@
 </head>
 <body>
     {{>menu}}
-    <h3><i>Discover What Developers are Listening To</i></h3>
-    <p>Welcome back, {{user.firstname}}</p>
+    <br>
+    
+    <h3>Welcome back, {{firstName}}</h3>
+    <br>
+    <h4>Share your music and what you're working on</h4>
     {{! this adds a post }}
     <form method="POST" action='/posts/add-post' id='inputContainer'>
         <div id="subjectDiv">
-            <input type="text" placeholder="title" id="titleTextBox" name="title"/>
+            <input type="text" placeholder="Title" id="titleTextBox" name="title"/>
             
         </div>
         <div id="bodyDiv">
-            <input type="text" placeholder="body" id="bodyTextBox" name="body"/>
+            <input type="text" placeholder="Body" id="bodyTextBox" name="body"/>
         </div>
         <div id="projectUrl">
             <input type="text" placeholder="projectUrl" id="projectUrlTextBox" name="projectUrl"/>
@@ -26,16 +29,20 @@
             <button id="postButton">Post</button>
         </div>
     </form>
+    <br>
+    <br>
 
     {{! this display posts from all users }}
     <div id='postsContainer'>
         {{#posts}}
         {{! <form class='post_container' method="POST" action='/delete-post'>
-            <input type="hidden" value="{{id}}" name="postId"/> }}
+            <input type="hidden" value="{{id}}
+            <input type="hidden" value="{{id}}" name="postId"/>
             <div>{{title}}</div>
             <div>{{body}}</div>
-            <div>{{projectUrl}}</div>
-        {{! </form> }}
+            <a target="_blank" href="{{projectUrl}}">Project Link</a>
+            <br>
+            <br>
         {{/posts}}
     </div>
     {{>footer}}
