--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -1,2 +1,16 @@
+
+<footer class="bg-dark text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3 text-light" style="background-color: rgba(0, 0, 0, 0.2);">
+    Powered by: <a class="text-light" href="http://deezer.com">Deezer</a>
+    <br>
+    © 2021 Copyright:
+    <a class="text-light" href="/">musiCode.com</a>
+    <br>
+    Created by: Megan Mason, Neil Shah, Zack Hurts & Clarence Saxby 
+  </div>
+  <!-- Copyright -->
+</footer>
+
 <script src="https://unpkg.com/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
 <script src="/styling/js/bootstrap.js"></script>
