--- a/views/partials/menu.mustache
+++ b/views/partials/menu.mustache
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
       <div class="container">
-        <a class="navbar-brand" href="/">musiCode</a>
+        <a class="navbar-brand" href="/">
+          <img src="../styling/css/images/musiCode.png" alt="" width="120" height="96" class="d-inline-block align-text-top">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
