--- a/views/my-posts.mustache
+++ b/views/my-posts.mustache
@@ -14,10 +14,11 @@
             <div>{{body}}</div>
             <a target="_blank" href="{{projectUrl}}">Project Link</a>
             <div><button>Delete</button></div>
-            <div><button>Update</button></div>
+            <div><button>Edit</button></div>
         </form>
         {{/posts}}
     </div>
      {{> footer}}
 </body>
 </html>
+
