update in showing collection of other users

--- a/views/add-post.mustache
+++ b/views/add-post.mustache
@@ -29,6 +29,7 @@
             <div>{{projectUrl}}</div>
             <div><button>Delete</button></div>
         </form>
+        {{userId}}
         {{/posts}}
     </div>
     {{> footer}}
