--- a/views/display-posts.mustache
+++ b/views/display-posts.mustache
@@ -13,8 +13,8 @@
             <div>{{title}}</div>
             <div>{{body}}</div>
             <a target="_blank" href="{{projectUrl}}">Project Link</a>
-            <div><button>Delete</button></div>
         </form>
+        <button><a href = "/playlists/mycollection/{{userId}}">checkout what iam listening</a></button>
         {{/posts}}
     </div>
      {{> footer}}
