fixed footer placement

--- a/views/register.mustache
+++ b/views/register.mustache
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     {{> header}}
+    <link rel="stylesheet" href="../styling/css/login-register-styling.css">
   </head>
   <body>
     {{> menu}}
