--- a/views/login.mustache
+++ b/views/login.mustache
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     {{> header}}
+    <link rel="stylesheet" href="../styling/css/login-register-styling.css">
   </head>
   <body>
     {{> menu}}
@@ -11,7 +12,7 @@
     <div id="messageContainer">
       <h1>{{message}}</h1>
     </div>
-
+    <div class="spaceDiv"></div>
   {{> footer}}
   </body>
 </html>
