--- a/views/my-posts.mustache
+++ b/views/my-posts.mustache
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{> header}}
+    {{>header}}
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>musiCode</title>
 </head>
 <body>
-   {{> menu}}
+    {{>menu}}
+    <br>
+    
+    <h3>Welcome back, {{firstName}}</h3>
+    <br>
+    <h4>Share your music and what you're working on</h4>
+    {{! this adds a post }}
+    {{! <form method="POST" action='/posts/add-post' id='inputContainer'>
+        <div id="subjectDiv">
+            <input type="text" placeholder="Title" id="titleTextBox" name="title"/>
+            
+        </div>
+        <div id="bodyDiv">
+            <input type="text" placeholder="Body" id="bodyTextBox" name="body"/>
+        </div>
+        <div id="projectUrl">
+            <input type="text" placeholder="projectUrl" id="projectUrlTextBox" name="projectUrl"/>
+        <div id="submitDiv">
+            <button id="postButton">Post</button>
+        </div>
+    </form>
+    <br>
+    <br> }}
 
+    {{! this display posts from all users }}
     <div id='postsContainer'>
         {{#posts}}
-        <form class='post_container' method="POST" action='/posts/my-posts'>
+        {{! <form class='post_container' method="POST" action='/delete-post'>
+            <input type="hidden" value="{{id}}
             <input type="hidden" value="{{id}}" name="postId"/>
             <div>{{title}}</div>
             <div>{{body}}</div>
             <a target="_blank" href="{{projectUrl}}">Project Link</a>
-            <div><button>Delete</button></div>
-            <div><button>Edit</button></div>
-        </form>
+            <br>
+            <br>
         {{/posts}}
     </div>
-
-    <div id='postsContainer'>
-        {{#posts}}
-        {{! <form class='post_container' method="POST" action='/delete-post'>
-            <input type="hidden" value="{{id}}" name="postId"/> }}
-            <div>{{title}}</div>
-            <div>{{body}}</div>
-            <div>{{projectUrl}}</div>
-        {{! </form> }}
-        {{/posts}}
-    </div>
-    
-     {{> footer}}
+    {{>footer}}
 </body>
 </html>
