--- a/views/my-posts.mustache
+++ b/views/my-posts.mustache
@@ -11,7 +11,7 @@
     {{>menu}}
     <br>
     
-    <h3>Welcome back, {{firstName}}</h3>
+    <h3>Hello, {{firstName}}</h3>
     <br>
     <h4>Share your music and what you're working on</h4>
     {{! this adds a post }}
@@ -35,7 +35,7 @@
     {{! this display posts from all users }}
     <div id='postsContainer'>
         {{#posts}}
-        <form class='post_container' method="POST" action='/delete-post'>
+        <form class='post_container' method="POST" action='/display-my-post'>
             <input type="hidden" value="{{id
             <input type="hidden" value="{{id}}" name="postId"/>
             <div>{{title}}</div>
