added logout button to navbar

--- a/views/partials/menu.mustache
+++ b/views/partials/menu.mustache
@@ -9,7 +9,7 @@
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/users/dashboard">Home <span class="sr-only"></span></a>
+        <a class="nav-link" href="/users/dashboard">Dashboard<span class="sr-only"></span></a>
       </li>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
@@ -31,7 +31,13 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="/playlists/mycollection">My Collection</a></li>
                 <li><a class="dropdown-item" href="/posts/my-posts">My Posts</a></li>
-                <li><a class="dropdown-item" href="/posts/add-post">Add a Posts</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="/users/logout">
+                    <svg class="bi bi-power" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M5.578 4.437a5 5 0 1 0 4.922.044l.5-.866a6 6 0 1 1-5.908-.053l.486.875z"/>
+                        <path fill-rule="evenodd" d="M7.5 8V1h1v7h-1z"/>
+                    </svg>
+                    Log out</a></li>
               </ul>
             </li>
             </ul>
