display name fixed on my-posts

--- a/views/my-posts.mustache
+++ b/views/my-posts.mustache
@@ -11,26 +11,10 @@
     {{>menu}}
     <br>
     
-    <h3>Hello, {{firstName}}</h3>
+    <h3>Hello, {{firstName}}!</h3>
     <br>
-    <h4>Share your music and what you're working on</h4>
-    {{! this adds a post }}
-    {{! <form method="POST" action='/posts/add-post' id='inputContainer'>
-        <div id="subjectDiv">
-            <input type="text" placeholder="Title" id="titleTextBox" name="title"/>
-            
-        </div>
-        <div id="bodyDiv">
-            <input type="text" placeholder="Body" id="bodyTextBox" name="body"/>
-        </div>
-        <div id="projectUrl">
-            <input type="text" placeholder="projectUrl" id="projectUrlTextBox" name="projectUrl"/>
-        <div id="submitDiv">
-            <button id="postButton">Post</button>
-        </div>
-    </form>
-    <br>
-    <br> }}
+    <h4>You are viewing all of your posts.</h4>
+    
 
     {{! this display posts from all users }}
     <div id='postsContainer'>
