--- a/views/my-posts.mustache
+++ b/views/my-posts.mustache
@@ -12,9 +12,9 @@
     <br>
     
     <h3>Hello, {{firstName}}!</h3>
-    <br>
-    <h4>You are viewing all of your posts.</h4>
     
+    <h4><i>You are viewing all of your posts.</i></h4>
+    <br>
 
     {{! this display posts from all users }}
     <div id='postsContainer'>
@@ -22,12 +22,10 @@
         <form class='post_container' method="POST" action='/display-my-post'>
             <input type="hidden" value="{{id
             <input type="hidden" value="{{id}}" name="postId"/>
-            <div>{{title}}</div>
+            <div><b>{{title}}</b></div>
             <div>{{body}}</div>
             <a target="_blank" href="{{projectUrl}}">Project Link</a>
             <br>
-            <button><a href = "/playlists/mycollection/{{userId}}">checkout what iam listening</a></button>
-
             <br>
         {{/posts}}
     </div>
