created audio cards for search results and my collection

--- a/styling/css/login-register-styling.css
+++ b/styling/css/login-register-styling.css
@@ -1,4 +1,12 @@
 
+.headingTitle{
+  text-align: center;
+}
+
+.messageContainer {
+  text-align: center;
+}
+
 footer {
     position: absolute;
     bottom: 0;
