--- a/views/login.mustache
+++ b/views/login.mustache
@@ -6,10 +6,12 @@
   </head>
   <body>
     {{> menu}}
-    <h1>Login</h1>
+    <br>
+    <h1 class="headingTitle">Login</h1>
+    <br>
     {{> login-layout}}
-    
-    <div id="messageContainer">
+    <br>
+    <div class="messageContainer">
       <h1>{{message}}</h1>
     </div>
     <div class="spaceDiv"></div>
