--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -7,7 +7,7 @@
     © 2021 Copyright:
     <a class="text-light" href="/">musiCode.com</a>
     <br>
-    Created by: Megan Mason, Neil Shah, Zack Hurts & Clarence Saxby 
+    Created by: Megan Mason, Neil Shah, Zack Hurst & Clarence Saxby 
   </div>
   <!-- Copyright -->
 </footer>
