--- a/views/register.mustache
+++ b/views/register.mustache
@@ -6,13 +6,14 @@
   </head>
   <body>
     {{> menu}}
-    <h1>Register</h1>
+    <br>
+    <h1 class="headingTitle">Register</h1>
+    <br>
     {{> registration-layout}}
-    
-    <div id="messageContainer">
+    <br>
+    <div class="messageContainer">
       <h1>{{message}}</h1>
     </div>
-
     {{> footer}}
   </body>
 </html>
