--- a/views/search-results.mustache
+++ b/views/search-results.mustache
@@ -1,28 +1,49 @@
 <html>
-<head>
-<title>search result</title>
-</head>
-<body>
-
-{{#response}}
-
-
-{{title}}  ,  {{artist.name}}<br>
-{{album.title}}<br>
-<img src="{{album.cover_medium}}"><br>
-<a target="_blank" href="{{preview}}">preview</a>
-<form method="post" action="/playlists/collection">
-<input type="hidden" value="{{userId}}" name="userId">
-<input type="hidden" value="{{id}}" name="id">
-<input type="hidden" value="{{title}}" name="title">
-<input type="hidden" value="{{artist.name}}" name="artistName">
-<input type="hidden" value="{{album.title}}" name="albumTitle">
-<input type="hidden" value="{{album.cover_medium}}" name="coverUrl">
-<input type="hidden" value="{{preview}}" name="previewUrl">
-<button>Add To Collection</button>
-</form>
-<br><br><br>
-{{/response}}
-</body>
-
+    <head>
+        {{>header}}
+        <link rel="stylesheet" href="../styling/css/search-collection-styling.css">
+    </head>
+    <body>
+        {{>menu}}
+        {{#response}}
+        <!-- Content -->
+        <div class="container d-flex justify-content-center my-4 mb-5">
+            <div id="mobile-box">
+                <!-- Card -->
+                <div class="card">
+                    <!-- Card image -->
+                    <div class="view">
+                        <img class="card-img-top" src="{{album.cover_medium}}" alt="Card image cap">
+                    </div>
+                    <!-- Card content -->
+                    <div class="card-body text-center">
+                        <h5 class="h5 font-weight-bold">{{artist.name}}</h5>
+                        <p class="mb-0">{{title}}</p>
+                        <br>
+                        <button style="background-color: Transparent; border: none"><a class="text-dark" target="_blank" href="{{preview}}">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
+                                <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+                            </svg>
+                        </a></button>
+                    </div>
+                    <div class="addSongContainer">
+                        <form method="post" action="/playlists/collection">
+                            <input type="hidden" value="{{userId}}" name="userId">
+                            <input type="hidden" value="{{id}}" name="id">
+                            <input type="hidden" value="{{title}}" name="title">
+                            <input type="hidden" value="{{artist.name}}" name="artistName">
+                            <input type="hidden" value="{{album.title}}" name="albumTitle">
+                            <input type="hidden" value="{{album.cover_medium}}" name="coverUrl">
+                            <input type="hidden" value="{{preview}}" name="previewUrl">
+                            <button class="btn btn-outline-info" style="border: none">Add To Collection</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- Card -->
+        </div>
+        <!-- Content -->
+        {{/response}}
+        {{>footer}}
+    </body>
 </html>
