centered search results and my collection headings

--- a/views/display-playlist.mustache
+++ b/views/display-playlist.mustache
@@ -6,7 +6,7 @@
     <body>
         {{>menu}}
         <br>
-        <h3>My Collection</h3>
+        <h3 class="headingTitle">My Collection</h3>
         <br>
         {{#collections}}
         <!-- Content -->
