--- a/views/search-results.mustache
+++ b/views/search-results.mustache
@@ -6,7 +6,7 @@
     <body>
         {{>menu}}
         <br>
-        <h2>Search Results</h2>
+        <h2 class="headingTitle">Search Results</h2>
         <br>
         {{#response}}
         <!-- Content -->
