--- a/styling/css/styles.css
+++ b/styling/css/styles.css
@@ -2,6 +2,10 @@ body {
     background-color:#f1f4f7;
 }
 
+.headingTitle{
+    text-align: center;
+  }
+  
 footer {
     position: static;
     bottom: 0;
