--- a/styling/css/styles.css
+++ b/styling/css/styles.css
@@ -6,6 +6,11 @@ body {
     text-align: center;
   }
   
+/* h3, h4 {
+  font-family: 'Roboto Slab', serif;
+  font-weight:bolder;
+} 
+   */
 footer {
     position: static;
     bottom: 0;
