--- a/views/index.mustache
+++ b/views/index.mustache
@@ -3,14 +3,21 @@
 <head>
     {{> header}}
     <link rel="stylesheet" href="../styling/css/homepagestyling.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
   <div class="homepageBody">
    {{> menu}}
    <div class="welcomeText">
-   <p>Music sharing for developers, By developers</p>
+   <br>
+   <b><p>music sharing for developers,<br>
+    by developers</p>
+    <p class="smallParagraph">Share the music you love listening to while you're coding your latest project</p>
     <a href="users/register">
-    <button type="button" class="btn btn-light signupButton">Sign up now</button>
+    <button type="button" class="btn btn-light btn-lg signupButton">Sign up now</button>
    </a>
     </div>
     </div>
