--- a/views/partials/login-layout.mustache
+++ b/views/partials/login-layout.mustache
@@ -1,3 +1,6 @@
+<head>
+</head>
+
 <div class="col-md-6 mt-2 mx-auto">
         <form action="/users/login" method="POST" class="row g-3">
           <div class="col-md-6">
