almost the way we want it to look.
can display username and created date. still need firstName, and to format date

--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -35,6 +35,9 @@
         <form class='post_container' method="POST" action='/delete-post'>
             <input type="hidden" value="{{id}}" name="postId"/>
             <div><b>{{title}}</b></div>
+            <div>{{username}}</div>
+            <div>{{firstname}}</div>
+            <div>{{createdAt}}</div>
             <div>{{body}}</div>
             <a target="_blank" href="{{projectUrl}}">Project Link</a>
         </form>
