--- a/views/my-posts.mustache
+++ b/views/my-posts.mustache
@@ -22,6 +22,9 @@
             <input type="hidden" value="{{id}}"/>
             <input type="hidden" value="{{id}}" name="postId"/>
             <div><b>{{title}}</b></div>
+            <div>{{username}}</div>
+            <div>{{firstName}}</div>
+            <div>{{createdAt}}</div>
             <div>{{body}}</div>
             <a target="_blank" href="{{projectUrl}}">Project Link</a>
             <br>
