--- a/views/index.mustache
+++ b/views/index.mustache
@@ -13,11 +13,11 @@
    {{> menu}}
    <div class="welcomeText">
    <br>
-   <b><p>music sharing for developers,<br>
+   <b><p>Music sharing for developers,<br>
     by developers</p>
     <p class="smallParagraph">Share the music you love listening to while you're coding your latest project</p>
     <a href="users/register">
-    <button type="button" class="btn btn-light btn-lg signupButton">Sign up now</button>
+    <button type="button" class="btn btn-outline-info btn-lg signupButton">Sign up now</button>
    </a>
     </div>
     </div>
