--- a/views/partials/header.mustache
+++ b/views/partials/header.mustache
@@ -3,3 +3,5 @@
 <title>musiCode</title>
 <link type="text/css" rel="stylesheet" href="/styling/css/bootstrap.css">
 <link rel="stylesheet" href="../styling/css/styles.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
