--- a/views/register.mustache
+++ b/views/register.mustache
@@ -3,6 +3,8 @@
   <head>
     {{> header}}
     <link rel="stylesheet" href="../styling/css/login-register-styling.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   </head>
   <body>
     {{> menu}}
