firstname, username, and updated date show.
need to format date now

--- a/views/my-posts.mustache
+++ b/views/my-posts.mustache
@@ -24,7 +24,7 @@
             <div><b>{{title}}</b></div>
             <div>{{username}}</div>
             <div>{{firstName}}</div>
-            <div>{{createdAt}}</div>
+            <div>{{updatedAt}}</div>
             <div>{{body}}</div>
             <a target="_blank" href="{{projectUrl}}">Project Link</a>
             <br>
