--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -36,8 +36,8 @@
             <input type="hidden" value="{{id}}" name="postId"/>
             <div><b>{{title}}</b></div>
             <div>{{username}}</div>
-            <div>{{firstname}}</div>
-            <div>{{createdAt}}</div>
+            <div>{{firstName}}</div>
+            <div>{{updatedAt}}</div>
             <div>{{body}}</div>
             <a target="_blank" href="{{projectUrl}}">Project Link</a>
         </form>
