created card for add post container

--- a/styling/css/styles.css
+++ b/styling/css/styles.css
@@ -4,8 +4,11 @@ body {
 
 .headingTitle{
     text-align: center;
-  }
-  
+}
+
+#postCardHeader {
+}
+
 footer {
     position: static;
     bottom: 0;
