--- a/views/display-playlist.mustache
+++ b/views/display-playlist.mustache
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         {{>header}}
         <link rel="stylesheet" href="../styling/css/search-collection-styling.css">
