added other users collection back to dashboard

--- a/views/dashboard.mustache
+++ b/views/dashboard.mustache
@@ -51,6 +51,8 @@
             <div>{{updatedAt}}</div>
             <div>{{body}}</div>
             <a target="_blank" href="{{projectUrl}}">Project Link</a>
+            <br>
+            <a href="/playlists/mycollection/{{userId}}">Checkout What I'm Listening To</a>
         </form>
         <br>
         <br>
