--- a/views/partials/registration-layout.mustache
+++ b/views/partials/registration-layout.mustache
@@ -24,6 +24,7 @@
           <div class="col-12">
             <button class="btn btn-outline-info" type="submit">Register</button>
           </div>
+          <p>If you already have an account, <a href="/users/login">Click here</a></p>
         </form>
       </div>
     </div>
